# SKKU_AutoDrive

./: .gitignore  README.md
config/: calibration.yaml
docs/: CALIBRATION.md  HARDWARE_CODE_MAP.md  IMPLEMENTATION.md  JAZZY_BUILD_NOTES.md  ROS2_입문_가이드.md  RUNTIME_FIXES.md  code_usage_plan.md
models/: README.md
ros2_ws/: fastdds_bigbuf.xml
ros2_ws/src/: README.md
ros2_ws/src/AutoSDV-HPC/: CLAUDE.md  fastdds_whitelist.xml  wireless.xml
ros2_ws/src/AutoSDV-HPC/.claude/: README.md
ros2_ws/src/AutoSDV-HPC/.claude/plans/: diagnostic-plan.md  ecu-optimization-plan.md  session-plan-ko.md  zcu-optimization-plan.md
ros2_ws/src/AutoSDV-HPC/Connectioncheck_Diagnostics/: diagnostic_check.py  diagnostic_check_bak.py
ros2_ws/src/AutoSDV-HPC/Updates/: SKKU_OTA_XETH_APP2.bin.signed
ros2_ws/src/AutoSDV-HPC/src/camera_perception_pkg/: setup.py
ros2_ws/src/AutoSDV-HPC/src/data_collection_pkg/: setup.py
ros2_ws/src/AutoSDV-HPC/src/debug_pkg/: package.xml  setup.py
ros2_ws/src/AutoSDV-HPC/src/decision_making_pkg/: setup.py
ros2_ws/src/AutoSDV-HPC/src/ota_update_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/AutoSDV-HPC/src/ota_update_interfaces/msg/: UpdateNotification.msg
ros2_ws/src/AutoSDV-HPC/src/ota_update_manager/: package.xml  setup.cfg  setup.py
ros2_ws/src/AutoSDV-HPC/src/ota_update_manager/ota_update_manager/: ota_manager_node.py
scripts/: avoid_eval.py  install_ros2_jazzy.sh  parking_sim.py  pick_points.py  rear_park_eval.py  setup_env.sh  stop_all.sh  test_parking.sh  traffic_light_eval.py
(+35 files in other folders)
